syntax = "proto3";

package dest;

service Database {
  rpc DeleteDatabase (BaseRequest) returns (BaseResponse) {}
  rpc GetDatabase (BaseRequest) returns (DataResponse) {}
  rpc PostDatabase (SchemasRequest) returns (BaseResponse) {}
  rpc PutDatabase (DataRequest) returns (BaseResponse) {}
}

message DataItem {
  string name = 1;
  repeated string rows = 2;
}

message BaseRequest {
  string type = 1;
  string name = 2;
}

message SchemasRequest {
  string type = 1;
  string name = 2;
  repeated string schemas = 3;
}

message DataRequest {
  string type = 1;
  string name = 2;
  string action = 3;
  repeated DataItem data = 4;
}

message BaseResponse {
  bool success = 1;
}

message DataResponse {
  bool success = 1;
  repeated DataItem data = 2;
}
